Fixed css bugs (read desc)
Fixed the score in the user profile - which for users with low/high scores, would show in funny colors
Fixed minor css border in popup.css
Fixed the fact that some color palettes would show 1st side dms really unreadable

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -123,7 +123,6 @@ header {
 
 .colorPalette.selectedPalette {
   box-shadow: 0 0 0px 5px #d9d9d9;
-  outline: 2px solid #d9d9d9;
 }
 
 .colorPalette {
@@ -282,7 +281,6 @@ body[darkmode] #themesContainer {
 
 body[darkmode] .colorPalette.selectedPalette {
   box-shadow: 0 0 0px 5px var(--color1);
-  outline: 2px solid var(--color1);
 }
 body[darkmode] input[type='checkbox']:not(:checked) {
   background-color: var(--color2);
